fix: fix for columns

--- a/src/columns.scss
+++ b/src/columns.scss
@@ -3,7 +3,7 @@
 @mixin generate-cols($prefix) {
   @for $i from 1 through 12 {
     .#{$prefix}-#{$i} {
-      $percentage: calc(percentage($i / 12) - 8px);
+      $percentage: calc(percentage(calc($i / 12)) - 8px);
       flex: 0 0 $percentage;
       max-width: $percentage;
       padding: 0 4px;
